--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img src="img/limao.jpg" class="mb-3" width="563" height="278" loading="lazy" alt="Imagem de limão">
                     <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
-                <img src="img/limao_taiti.jpg" alt="Limão Taiti" title="Limão Taiti" class="img-fluid img-inicio">
+                <img src="images.jpg"Limão Taiti" title="Limão Taiti" class="img-fluid img-inicio">
             </div>
         </section>
 
