--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre o limão">
             <div class="container d-flex align-items-center">
                 <div class="col-4 d-flex justify-content-center">
-                    <img src="img/limao_info.png" class="rounded-pill" width="273" height="331" loading="lazy" alt="Informações sobre o limão">
+                    <img src="images.jpgg"rounded-pill" width="273" height="331" loading="lazy" alt="Informações sobre o limão">
                 </div>
                 <div class="col-5">
                     <h2>O que é o Limão?</h2>
