--- a/index.html
+++ b/index.html
@@ -59,4 +59,4 @@
             <div class="container p-3 mt-3 fundo-galeria">
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/limao1.jpg" class="img-fluid rounded-5" loading="
+                        <img src="img/logo limão.png/" class="img-fluid rounded-5" loading="
