--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="p-5">
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/logo limão.png" class="nav-img" loading="lazy">
+            <img src="img/logo limão.png" class="nav-img" loading="lazy" alt="Logo Limão">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -38,14 +38,14 @@
                     <img src="img/limao.jpg" class="mb-3" width="563" height="278" loading="lazy" alt="Imagem de limão">
                     <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
-                <img src="images.jpg"Limão Taiti" title="Limão Taiti" class="img-fluid img-inicio">
+                <img src="img/limão_taiti.jpg" alt="Limão Taiti" title="Limão Taiti" class="img-fluid img-inicio">
             </div>
         </section>
 
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre o limão">
             <div class="container d-flex align-items-center">
                 <div class="col-4 d-flex justify-content-center">
-                    <img src="images.jpgg"rounded-pill" width="273" height="331" loading="lazy" alt="Informações sobre o limão">
+                    <img src="img/informacoes_sobre_limao.jpg" class="rounded-pill" width="273" height="331" loading="lazy" alt="Informações sobre o limão">
                 </div>
                 <div class="col-5">
                     <h2>O que é o Limão?</h2>
@@ -59,4 +59,19 @@
             <div class="container p-3 mt-3 fundo-galeria">
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/logo limão.png/" class="img-fluid rounded-5" loading="
+                        <img src="img/logo_limão.png" class="img-fluid rounded-5" loading="lazy" alt="Logo Limão">
+                    </div>
+                    <!-- Adicione mais imagens aqui -->
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="text-center p-4">
+        <p>&copy; 2023 Limão. Todos os direitos reservados.</p>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
