--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas ao Mundo do Limão!</h1>
-                    <img src="img/limao.jpg" class="mb-3" width="563" height="278" loading="lazy" alt="Imagem de limão">
-                    <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
+                    <img src="img/logo limão.png"mb-3" width="563" height="278" loading="lazy" alt="Imagem de limão">
+                    <a href="#limão" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
-                <img src="img/limão_taiti.jpg" alt="Limão Taiti" title="Limão Taiti" class="img-fluid img-inicio">
+                <img src="img/logo-2.png" alt="Limão Taiti" title="Limão Taiti" class="img-fluid img-inicio">
             </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre o limão">
+        <section id="limão" class="my-5 pt-6 secao-limão" tabindex="0" aria-label="Seção explicativa sobre o limão">
             <div class="container d-flex align-items-center">
                 <div class="col-4 d-flex justify-content-center">
-                    <img src="img/informacoes_sobre_limao.jpg" class="rounded-pill" width="273" height="331" loading="lazy" alt="Informações sobre o limão">
+                    <img src="im class="rounded-pill" width="273" height="331" loading="lazy" alt="Informações sobre o limão">
                 </div>
                 <div class="col-5">
                     <h2>O que é o Limão?</h2>
@@ -59,7 +59,7 @@
             <div class="container p-3 mt-3 fundo-galeria">
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/logo_limão.png" class="img-fluid rounded-5" loading="lazy" alt="Logo Limão">
+                        <img src="img/logo limão.png" class="img-fluid rounded-5" loading="lazy" alt="Logo Limão">
                     </div>
                     <!-- Adicione mais imagens aqui -->
                 </div>
